WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142121
[WK1][WK2][Mac] Fullscreen animation is incorrect when page is scaled.
https://bugs.webkit.org/show_bug.cgi?id=142121
Summary
[WK1][WK2][Mac] Fullscreen animation is incorrect when page is scaled.
Jer Noble
Reported
2015-02-27 18:14:45 PST
[WK1][WK2][Mac] Fullscreen animation is incorrect when page is scaled.
Attachments
Patch
(23.28 KB, patch)
2015-02-28 09:55 PST
,
Jer Noble
simon.fraser
: review+
Details
Formatted Diff
Diff
Patch for landing
(23.48 KB, patch)
2015-02-28 11:36 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-02-28 09:55:18 PST
Created
attachment 247602
[details]
Patch
Jer Noble
Comment 2
2015-02-28 11:36:21 PST
Created
attachment 247607
[details]
Patch for landing
Jer Noble
Comment 3
2015-02-28 12:26:34 PST
mac-wk2 EWS is showing a test failure: fast/css/object-fit/object-fit-canvas.html, but it's showing the same failure on all the EWS runs, so it's not added by this patch.
WebKit Commit Bot
Comment 4
2015-03-02 09:37:36 PST
Comment on
attachment 247607
[details]
Patch for landing Clearing flags on attachment: 247607 Committed
r180885
: <
http://trac.webkit.org/changeset/180885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug